[project]
name = "Bonk Utilities"
version = "1.1.0"
authors = [{ name = "Pyrex" }]
description = "Some useful/fun stuff, more keybinds than you have keys on your keyboard lol. Most of this stuff should work on BL3 & WL"

[tool.sdkmod]
name = "Bonk Utilities"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
supported_games = ["BL3", "WL"]
download = "https://github.com/PyrexBLJ/BL3-SDK-Mods/raw/refs/heads/main/BonkUtilities/BonkUtilities.sdkmod"
version = "1.1.0"