[project]
name = "PersistentMarket"
version = "1.0.1"
authors = [{ name = "Pyrex" }]
description = "No more 30 minute lockout on the black market vendor and red chests"

[tool.sdkmod]
name = "Persistent Market"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
supported_games = ["BL3"]
download = "https://github.com/PyrexBLJ/BL3-SDK-Mods/raw/refs/heads/main/PersistentMarket/PersistentMarket.sdkmod"
version = "1.0.1"