[project]
name = "diamondchestconfig"
version = "1.0.1"
authors = [{ name = "Pyrex" }]
description = "Some diamond chest room options"

[tool.sdkmod]
name = "Diamond Loot Config"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
supported_games = ["BL3"]
download = "https://github.com/PyrexBLJ/BL3-SDK-Mods/raw/refs/heads/main/diamondchestconfig/diamondchestconfig.sdkmod"
version = "1.0.1"