[project]
name = "noqtd"
version = "1.0.2"
authors = [{ name = "Pyrex" }]
description = "Disables the in-game quit to desktop button in the quit popup. still works at the main menu. Also can disable the Quit to Title Screen button at the main menu."

[tool.sdkmod]
name = "No QTD"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
supported_games = ["BL3", "WL"]
download = "https://github.com/PyrexBLJ/BL3-SDK-Mods/raw/refs/heads/main/noqtd/noqtd.sdkmod"
version = "1.0.2"