[project]
name = "op_movement"
version = "1.0.7"
authors = [{ name = "Pyrex" }]
description = "Very broken movement mechanics that i found very fun. Now with controller support!\n\nCommands: setmaxjumps\nsetmaxdashes"

[tool.sdkmod]
name = "OP Movement"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
supported_games = ["BL3", "WL"]
download = "https://github.com/PyrexBLJ/BL3-SDK-Mods/raw/refs/heads/main/op_movement/op_movement.sdkmod"
version = "1.0.7"